# aegis-waf

./: .gitignore  AEGIS_REALTIME_OPTIMIZATION.md  Cargo.toml  Dockerfile  Dockerfile.agent  LICENSE  README.md  check.bat  config.standalone.toml  config.toml  docker-compose.agent.yml  docker-compose.yml  install.sh  manager.sh  package-lock.json  package.json  rename.py  rewrite_main.py  start.bat  start.sh  stress_test.py
.github/workflows/: devsecops.yml  release.yml
.zap/: rules.tsv
aegis-ebpf/: Cargo.toml
aegis-ebpf/src/: lib.rs  main.rs
dashboard/: index.html  package-lock.json  package.json  svelte.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.js  vite.config.ts
dashboard/public/: install.ps1  install.sh
dashboard/src/: App.svelte  app.css
dashboard/src/components/layout/: Layout.svelte  Sidebar.svelte  (+2 more)
dashboard/src/lib/: LiveLogs.svelte  Overview.svelte  RateLimiting.svelte  RuleEngine.svelte  VirtualHosts.svelte  stores.ts  toast.ts
dashboard/src/pages/: AccessControl.svelte  AgentNodes.svelte  Dashboard.svelte  LiveLogs.svelte  RateLimiting.svelte  RuleEngine.svelte  SSLCertificates.svelte  ThreatIntel.svelte  VHostConfig.svelte
jarswaf-ebpf/: Cargo.toml
jarswaf-ebpf/src/: main.rs
src/: config.rs  lib.rs  logging.rs  main.rs  pingora_proxy.rs  proxy.rs  proxy_engine.rs  rules.rs  tls.rs  types.rs  vhost.rs  xdp.rs
src/agent/: blocklist.rs  discovery.rs  metrics.rs  mod.rs  server.rs  websocket.rs
src/controller/: auth.rs  mod.rs  state.rs  websocket.rs
src/controller/handlers/: agents.rs  config.rs  lists.rs  logs.rs  metrics.rs  mod.rs  ratelimits.rs  rules.rs  ssl.rs  stats.rs  threat_intel.rs  vhosts.rs
src/rules/: body.rs  headers.rs  uri.rs
xtask/src/: main.rs
(+26 files in other folders)
