[package]
name = "aegis-waf"
version = "0.1.0"
edition = "2021"
description = "Pure Layer 7 WAF - Homelab Edition"

[workspace]
members = [
    "aegis-ebpf",
    "xtask",
]

[dependencies]
axum = { version = "0.7", features = ["macros", "ws"] }
tokio = { version = "1", features = ["full"] }
rustls = "0.23"
rustls-pemfile = "2"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
regex = "1"
dashmap = "5"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1.21.4"
rcgen = { version = "0.14.8", features = ["x509-parser"] }
tokio-rustls = "0.26.4"
rustls-pki-types = "1.14.1"
clap = { version = "4.6.1", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
tokio-stream = { version = "0.1", features = ["sync"] }
urlencoding = "2.1.3"
sysinfo = "0.30.12"
tokio-tungstenite = "0.21.0"




[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["user"] } # for privilege dropping

[target.'cfg(target_os = "linux")'.dependencies]
aya = { git = "https://github.com/aya-rs/aya", branch = "main" }
aya-log = { git = "https://github.com/aya-rs/aya", branch = "main" }

[profile.dev.package.aegis-ebpf]
opt-level = "s"
debug = false
debug-assertions = false
overflow-checks = false

[profile.release.package.aegis-ebpf]
opt-level = "s"
debug = false
debug-assertions = false
overflow-checks = false
